--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "demo-app",
   "version": "1.0.0",
-  "description": "Aplicacion MVC demo",
+  "description": "Aplicacion Parcial IS3",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
