--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   "dependencies": {
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
+    "chart.js": "^4.4.4",
+    "datatables.net": "^2.1.5",
     "datatables.net-bs5": "^1.12.1",
+    "datatables.net-dt": "^2.1.5",
     "fullcalendar": "^5.11.3",
     "jquery": "^3.6.1",
     "leaflet": "^1.9.2",
